# sp-1-knowledgebase-skill

./: README.md  SKILL.md  corrections.md  gaps-index.md  hallucination-watchlist.md  known-unknowns.md  sources.md  synthesis-log.md  update-log.md  working-confirmed.md
assets/: TE-Stem-User-Guide.docx
assets/sp1-midi-2026-05-13/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
assets/sp1-midi-2026-05-13/app/: AppStateMachine.cpp  AppStateMachine.hpp  Leds.cpp  Leds.hpp  MidiController.cpp  MidiController.hpp  main.cpp
assets/sp1-midi-2026-05-13/boards/teenageengineering/stem_player/: Kconfig.defconfig  Kconfig.stem_player  board.cmake  board.yml  stem_player-pinctrl.dtsi  stem_player.dts  stem_player.yaml  stem_player_defconfig
assets/sp1-midi-2026-05-13/drivers/audio/: Kconfig  cs42l42_codec.c  cs42l42_codec.h  tas2505_codec.c  tas2505_codec.h
assets/sp1-midi-2026-05-13/drivers/charger/: Kconfig  charger_bq24232.c  charger_bq24232.h
assets/sp1-midi-2026-05-13/dts/bindings/: vendor-prefixes.txt
assets/sp1-midi-2026-05-13/dts/bindings/audio/: cirrus,cs42l42.yaml  ti,tas2505.yaml
assets/sp1-midi-2026-05-13/dts/bindings/charger/: ti,bq24232.yaml
assets/sp1-midi-2026-05-13/include/stem_player/: README.md  Smf.hpp
assets/sp1-midi-2026-05-13/include/zpp/: Primitives.hpp  Smf.hpp
assets/sp1-midi-2026-05-13/subsys/power/: PowerManager.cpp  PowerManager.hpp
assets/sp1-midi-2026-05-13/subsys/system/: ResetBreadcrumbs.cpp  ResetBreadcrumbs.hpp  Watchdog.cpp  Watchdog.hpp
assets/sp1-midi-2026-05-13/zephyr/: module.yml
(+1000 files in other folders)
